data/derived/sp14/progs/unify/prog1831.ml.out
Characters 47-59:
  let b' = f b in wwhile( ( f, b' = b)
                          ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
